# gemini-3-simply-comfyui

./: .gitignore  README.md  __init__.py  bug_report.txt  config.example.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/js/: camera3d_prompt.js
