[project]
name = "gemini-3-simply-comfyui"
description = "Two lightweight ComfyUI nodes for Gemini 3 preview models: Gemini 3 Pro (Text) and Gemini 3 Pro Image. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["google-genai>=1.7.0"]

[project.urls]
Repository = "https://github.com/lazyq666/gemini-3-simply-comfyui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lazyq666/gemini-3-simply-comfyui/wiki"
"Bug Tracker" = "https://github.com/lazyq666/gemini-3-simply-comfyui/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "gemini-3-simply-comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

